# ChangeLog for app-text/html2fo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2011; Justin Lecher <jlec@gentoo.org> html2fo-0.4.2.ebuild,
  +metadata.xml:
  Added metadata.xml
