@@ -1,6 +1,10 @@
 # ChangeLog for app-text/html2fo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  03 Jul 2013; Justin Lecher <jlec@gentoo.org> html2fo-0.4.2.ebuild,
+  metadata.xml:
+  Bump to EAPI=5
 
   31 Mar 2011; Justin Lecher <jlec@gentoo.org> html2fo-0.4.2.ebuild,
   +metadata.xml:
